--- a/assignment2/classes.html
+++ b/assignment2/classes.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Basic Information Page</h1>
-    <img src="creative.jpg" alt=creative
+    <img src="creative.jpg" alt=creative />
     <ul>
   <li><a href="classes.html">Main</a></li>
   <li><a href="requirements.html">Requirements</a></li>
