--- a/assignment2/main.html
+++ b/assignment2/main.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>CTK Courses Page</h1>
-    <img src="courses.jpg" alt=courses
+    <img src="courses.jpg" alt=courses />
     <ul>
   <li><a href="classes.html">Main</a></li>
   <li><a href="requirements.html">Requirements</a></li>
