--- a/assignment2/requirements.html
+++ b/assignment2/requirements.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Requirement Information Page</h1>
-    <img src="requirements.jpg" alt=requirements
+    <img src="requirements.jpg" alt="requirements" />
     <ul>
   <li><a href="classes.html">Main</a></li>
   <li><a href="requirements.html">Requirements</a></li>
