--- a/report/about.html
+++ b/report/about.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/xwq1tmp.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-	<link href="Assignment11.css" rel="stylesheet" type="text/css">
+	<link href="final.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -33,9 +33,9 @@
 
 	<nav>
 		<uu>
-			<li><a href="welcome.html" target="_blank">Welcome</a></li>
-				<li><a href="video.html" target="_blank">Video</a><li>
-					<li><a href="about.html" target="_blank">About Me</a></li>
+			<li><a href="welcome.html">Welcome</a></li>
+				<li><a href="video.html">Video</a><li>
+					<li><a href="about.html">About Me</a></li>
 				</ui>
 
 	</nav>
