--- a/report/video.html
+++ b/report/video.html
@@ -8,10 +8,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/xwq1tmp.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-	<link href="Assignment11.css" rel="stylesheet" type="text/css">
+	<link href="final.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div id="wrapper">
+	<div id="wrapper_main">
   <header>
 		<h1> Josh Palomar Video Page </h1>
 	</header>
@@ -23,16 +23,16 @@
 
 	<nav>
 		<ul>
-			<li><a href="welcome.html" target="_blank">Welcome</a></li>
-				<li><a href="video.html" target="_blank">Video</a><li>
-					<li><a href="about.html" target="_blank">About Me</a></li>
+			<li><a href="welcome.html">Welcome</a></li>
+				<li><a href="video.html">Video</a><li>
+					<li><a href="about.html">About Me</a></li>
 				</ul>
 
 	</nav>
 
 	<main>
 		<article>
-		<h2> About Me Introduction </h2>
+		<h2> Video Project </h2>
 		<p> For this video project, I wanted to show the evolution of music and exaplain just how popular that particular song was in a certain decade.  To show this, I included 2 of some the most popular songs of that particular decade based off how many plays and views they got on streaming services.  I also based off a songs popularitiy if it still gets played to this day or has a clear influence on music today.  This video was a way for me to practice my video editing and certain film shots as well.</p>
 
 
