--- a/report/welcome.html
+++ b/report/welcome.html
@@ -8,10 +8,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/xwq1tmp.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-	<link href="Assignment11.css" rel="stylesheet" type="text/css">
+	<link href="final.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div id="wrapper">
+	<div id="wrapper_main">
   <header>
 		<h1> Josh Palomar Main Page </h1>
 	</header>
@@ -23,9 +23,9 @@
 
 	<nav>
 		<ul>
-			<li><a href="welcome.html" target="_blank">welcome</a></li>
-				<li><a href="video.html" target="_blank">Video</a><li>
-					<li><a href="about.html" target="_blank">About Me</a></li>
+			<li><a href="welcome.html">welcome</a></li>
+				<li><a href="video.html">Video</a><li>
+					<li><a href="about.html">About Me</a></li>
 				</ul>
 
 	</nav>
